--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ php:
   - 5.5
   - 5.4
   - 5.3
+  - 5.2
 
+before_script:
+  - composer install --dev --no-interaction
+    
 script: phpunit --configuration ./tests/phpunit.travis.xml
 
 branches:
